<resources>
    <string name="app_name">PatternProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in">Sign In</string>
    <string name="require">Require</string>
    <string name="press_password">Press Password</string>
    <string name="press_username">Press Username</string>
    <string name="press_fullname">Press Fullname</string>
    <string name="press_year">Press Year</string>


    <string-array name="status">
        <item>Đã trả</item>
        <item>Chưa trả</item>
    </string-array>

    <string-array name="status1_done">
        <item>Đã trả</item>
    </string-array>
    <string-array name="status1_not">
        <item>Chưa trả</item>
    </string-array>

</resources>